# 545proxy

./: CMakeLists.txt  Makefile  README.md  afree-cpuminer-proxy.conf  afree-cpuminer-proxy.rc  check-afree-cpuminer-proxy.sh  conf.c  defs.h  main.c  miner.c  pool.c  proxy.c  stratum.c  stratum.h  util.c
cmake/: ALL_BUILD.vcxproj.user.in  afree-cpuminer-proxy.vcxproj.user.in
